syntax = "proto3";

service NoteService {
  rpc CreateNote (Note) returns (Empty);
  rpc UpdateNote (Note) returns (Empty);
  rpc DeleteNote (NoteId) returns (Empty);
  rpc ListNotes (Empty) returns (NoteList);
}

message Note {
  string id = 1;
  string title = 2;
  string description = 3;
  string created_at = 4;
  string updated_at = 5;
}

message NoteId {
  string id = 1;
}

message NoteList {
  repeated Note notes = 1;
}

message Empty {}
